--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "grunt-contrib-clean": "^0.x.x",
     "grunt-contrib-concat": "^0.x.x",
     "grunt-contrib-connect": "^0.x.x",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-copy": "^0.x.x",
     "grunt-contrib-cssmin": "^0.x.x",
-    "grunt-contrib-imagemin": "^0.8.1",
+    "grunt-contrib-imagemin": "^0.x.x",
     "grunt-contrib-uglify": "^0.x.x",
     "grunt-contrib-watch": "~0.x.x",
     "grunt-dev-update": "^0.x.x",
+    "grunt-gh-pages": "^0.x.x",
     "grunt-sass": "~0.x.x",
     "node-sass": "~0.x.x"
   }
