Add run-scripts to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "type": "git",
     "url": "https://github.com/rthrblck/arthurblackdesign"
   },
+  "scripts": {
+    "start": "grunt",
+    "test": "grunt test",
+    "deploy": "grunt deploy"
+  },
   "dependencies": {
     "grunt": "~0.x.x",
     "grunt-autoprefixer": "^1.x.x",
